devise header aligned correctly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,10 @@
 	}
 }
 
+.header_extra{
+	margin-left: 12.5%;
+}
+
 html, body{
 	height: 100%;
 	background-color: #3B60B0;
@@ -49,10 +53,10 @@ header{
 	margin: 0 auto;
 	border-bottom: 2px solid #C13D45;
 	.left-header{
-		float:left;
+		float: left;
 	}
 	ul{
-		float:right;
+		float: right;
 		li{
 			display: inline-block;
 		}
